--- a/packages.config
+++ b/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AssimpNet" version="3.3.1" targetFramework="net40" requireReinstallation="True" />
+  <package id="Newtonsoft.Json" version="6.0.7" targetFramework="net45" />
   <package id="OpenTK" version="1.1.1589.5942" targetFramework="net40" />
   <package id="OpenTK.GLControl" version="1.1.1589.5942" targetFramework="net45" />
 </packages>
