Added more logging, a MonoMac test project, NUnit Testing project, and bug fixes
Signed-off-by: Gabriel Reiser <greiser@cardfree.com>

--- a/Reactor.csproj
+++ b/Reactor.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Utilities\ReflectionHelpers.cs" />
     <Compile Include="RGameWindow.cs" />
     <Compile Include="RLog.cs" />
+    <Compile Include="Platform\DummyRenderControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
