Added some texture loading code
Signed-off-by: Gabriel Reiser <greiser@cardfree.com>

--- a/MonoMac/MonoMac.csproj
+++ b/MonoMac/MonoMac.csproj
@@ -10,6 +10,7 @@
     <MonoMacResourcePrefix>Resources</MonoMacResourcePrefix>
     <AssemblyName>MonoMac</AssemblyName>
     <StartupObject>MonoMac.Program</StartupObject>
+    <SuppressXamMacUpsell>True</SuppressXamMacUpsell>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
