--- a/Reactor.csproj
+++ b/Reactor.csproj
@@ -79,9 +79,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AssimpNet">
-      <HintPath>packages\AssimpNet.3.3.1\lib\net20\AssimpNet.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -91,14 +88,14 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4">
-      <HintPath>packages\OpenTK.1.1.1589.5942\lib\NET40\OpenTK.dll</HintPath>
-    </Reference>
-    <Reference Include="OpenTK.GLControl">
-      <HintPath>packages\OpenTK.GLControl.1.1.1589.5942\lib\NET40\OpenTK.GLControl.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>packages\Newtonsoft.Json.6.0.7\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="AssimpNet">
+      <HintPath>packages\AssimpNet.3.3.1\lib\net45\AssimpNet.dll</HintPath>
+    </Reference>
+    <Reference Include="OpenTK">
+      <HintPath>packages\OpenTKWithOpenAL.1.1.1589.5942\lib\NET40\OpenTK.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -165,6 +162,9 @@
     <Compile Include="Geometry\RVertexElementUsage.cs" />
     <Compile Include="Geometry\RBufferUsage.cs" />
     <Compile Include="Geometry\RVertexDataOptions.cs" />
+    <Compile Include="Loaders\DDSLoader.cs" />
+    <Compile Include="Loaders\GDILoader.cs" />
+    <Compile Include="Loaders\TextureLoaderParameters.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -172,8 +172,8 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="packages\AssimpNet.3.3.1\build\AssimpNet.targets" Condition="Exists('packages\AssimpNet.3.3.1\build\AssimpNet.targets')" />
   <Import Project="packages\VVVV.FreeImage.3.15.1.1\build\net40\VVVV.FreeImage.targets" Condition="Exists('packages\VVVV.FreeImage.3.15.1.1\build\net40\VVVV.FreeImage.targets')" />
+  <Import Project="packages\AssimpNet.3.3.1\build\AssimpNet.targets" Condition="Exists('packages\AssimpNet.3.3.1\build\AssimpNet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -199,5 +199,6 @@
   </ProjectExtensions>
   <ItemGroup>
     <Folder Include="Geometry\" />
+    <Folder Include="Loaders\" />
   </ItemGroup>
 </Project>
