--- a/Reactor/MonoMac/MonoMac.csproj
+++ b/Reactor/MonoMac/MonoMac.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -86,6 +87,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="meshes\test.dae">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\..\ThirdParty\assimp\libassimp.dylib">
+      <Link>libassimp.dylib</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
