Updated NDoc to conform to how monodoc expects documentation output for examples
Signed-off-by: Gabriel Reiser <greiser@cardfree.com>

--- a/Reactor/Reactor.csproj
+++ b/Reactor/Reactor.csproj
@@ -47,6 +47,7 @@
     <WarningLevel>4</WarningLevel>
     <Optimize>false</Optimize>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\x64\Debug\Reactor.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
