--- a/Reactor/Reactor.csproj
+++ b/Reactor/Reactor.csproj
@@ -198,6 +198,8 @@
     <Compile Include="RScreen.cs" />
     <Compile Include="Types\RFont.cs" />
     <Compile Include="Types\RTextureGlyph.cs" />
+    <Compile Include="Types\RTextureAtlas.cs" />
+    <Compile Include="Types\RTextureSprite.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
