--- a/Reactor/Reactor.csproj
+++ b/Reactor/Reactor.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Types\RTextureGlyph.cs" />
     <Compile Include="Types\RTextureAtlas.cs" />
     <Compile Include="Types\RTextureSprite.cs" />
+    <Compile Include="Types\RPixelFormat.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
