Still working out texture loading as well as 2d drawing
Signed-off-by: Gabriel Reiser <greiser@cardfree.com>

--- a/Reactor/Reactor.csproj
+++ b/Reactor/Reactor.csproj
@@ -209,6 +209,8 @@
     <EmbeddedResource Include="Shaders\basicEffect.vert.glsl" />
     <EmbeddedResource Include="Fonts\coders_crux.ttf" />
     <None Include="freetype6.dll" />
+    <EmbeddedResource Include="Shaders\basic2dEffect.frag.glsl" />
+    <EmbeddedResource Include="Shaders\basic2dEffect.vert.glsl" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
