--- a/Reactor/MonoMac/MonoMac.csproj
+++ b/Reactor/MonoMac/MonoMac.csproj
@@ -97,5 +97,9 @@
     <Content Include="meshes\bunny.x">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\..\..\..\Documents\reisergames.png">
+      <Link>reisergames.png</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
