Update to add beginnings of Audio support for Ogg Vorbis
Signed-off-by: Gabriel Reiser <gabe@gabereiser.com>

--- a/Reactor/Reactor.csproj
+++ b/Reactor/Reactor.csproj
@@ -111,9 +111,38 @@
     <Reference Include="System.Drawing" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Audio\ALHelper.cs" />
+    <Compile Include="Audio\NVorbis\BufferedReadStream.cs" />
+    <Compile Include="Audio\NVorbis\DataPacket.cs" />
+    <Compile Include="Audio\NVorbis\Huffman.cs" />
+    <Compile Include="Audio\NVorbis\IContainerReader.cs" />
+    <Compile Include="Audio\NVorbis\IPacketProvider.cs" />
+    <Compile Include="Audio\NVorbis\IVorbisStreamStatus.cs" />
+    <Compile Include="Audio\NVorbis\Mdct.cs" />
+    <Compile Include="Audio\NVorbis\NewStreamEventArgs.cs" />
+    <Compile Include="Audio\NVorbis\Ogg\OggContainerReader.cs" />
+    <Compile Include="Audio\NVorbis\Ogg\OggCrc.cs" />
+    <Compile Include="Audio\NVorbis\Ogg\OggPacket.cs" />
+    <Compile Include="Audio\NVorbis\Ogg\OggPacketReader.cs" />
+    <Compile Include="Audio\NVorbis\Ogg\OggPageFlags.cs" />
+    <Compile Include="Audio\NVorbis\ParameterChangeEventArgs.cs" />
+    <Compile Include="Audio\NVorbis\RingBuffer.cs" />
+    <Compile Include="Audio\NVorbis\StreamReadBuffer.cs" />
+    <Compile Include="Audio\NVorbis\Utils.cs" />
+    <Compile Include="Audio\NVorbis\VorbisCodebook.cs" />
+    <Compile Include="Audio\NVorbis\VorbisFloor.cs" />
+    <Compile Include="Audio\NVorbis\VorbisMapping.cs" />
+    <Compile Include="Audio\NVorbis\VorbisMode.cs" />
+    <Compile Include="Audio\NVorbis\VorbisReader.cs" />
+    <Compile Include="Audio\NVorbis\VorbisResidue.cs" />
+    <Compile Include="Audio\NVorbis\VorbisStreamDecoder.cs" />
+    <Compile Include="Audio\NVorbis\VorbisTime.cs" />
+    <Compile Include="Audio\RAudioStream.cs" />
+    <Compile Include="Audio\RAudioStreamer.cs" />
+    <Compile Include="Audio\RMusic.cs" />
     <Compile Include="Platform\Threading.cs" />
-    <Compile Include="RCamera2d.cs" />
-    <Compile Include="RFrameBuffer.cs" />
+    <Compile Include="Core\RCamera2d.cs" />
+    <Compile Include="Core\RFrameBuffer.cs" />
     <Compile Include="Types\RCameraNode.cs" />
     <Compile Include="Types\RColorWriteChannels.cs" />
     <Compile Include="Types\States\RBlend.cs" />
@@ -137,18 +166,18 @@
     <Compile Include="Platform\GameWindowRenderControl.cs" />
     <Compile Include="Platform\PictureBoxRenderControl.cs" />
     <Compile Include="Platform\RenderControl.cs" />
-    <Compile Include="REngine.cs" />
-    <Compile Include="RGame.cs" />
+    <Compile Include="Core\REngine.cs" />
+    <Compile Include="Core\RGame.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RMaterials.cs" />
-    <Compile Include="RScene.cs" />
+    <Compile Include="Core\RMaterials.cs" />
+    <Compile Include="Core\RScene.cs" />
     <Compile Include="Types\RDisplayMode.cs" />
     <Compile Include="Types\RDisplayModes.cs" />
     <Compile Include="Types\RLightType.cs" />
     <Compile Include="Types\RMesh.cs" />
     <Compile Include="Types\RRenderNode.cs" />
     <Compile Include="Types\RSceneNode.cs" />
-    <Compile Include="RTextures.cs" />
+    <Compile Include="Core\RTextures.cs" />
     <Compile Include="Types\RColor.cs" />
     <Compile Include="Types\RLight.cs" />
     <Compile Include="Types\RMaterial.cs" />
@@ -165,10 +194,10 @@
     <Compile Include="Utilities\Hash.cs" />
     <Compile Include="Utilities\ObjectFactory.cs" />
     <Compile Include="Utilities\ReflectionHelpers.cs" />
-    <Compile Include="RGameWindow.cs" />
-    <Compile Include="RLog.cs" />
+    <Compile Include="Core\RGameWindow.cs" />
+    <Compile Include="Core\RLog.cs" />
     <Compile Include="Platform\DummyRenderControl.cs" />
-    <Compile Include="RInput.cs" />
+    <Compile Include="Core\RInput.cs" />
     <Compile Include="Types\RWindowStyle.cs" />
     <Compile Include="Geometry\IVertexType.cs" />
     <Compile Include="Geometry\RVertexBuffer.cs" />
@@ -189,11 +218,11 @@
     <Compile Include="Types\RMeshPart.cs" />
     <Compile Include="Types\RNode.cs" />
     <Compile Include="Utilities\Serialization.cs" />
-    <Compile Include="RFileSystem.cs" />
+    <Compile Include="Core\RFileSystem.cs" />
     <Compile Include="Loaders\MeshLoader.cs" />
     <Compile Include="Types\RKey.cs" />
     <Compile Include="Types\RGameTime.cs" />
-    <Compile Include="RCamera.cs" />
+    <Compile Include="Core\RCamera.cs" />
     <Compile Include="Math\Rectangle.cs" />
     <Compile Include="Math\Curve.cs" />
     <Compile Include="Math\CurveContinuity.cs" />
@@ -207,7 +236,7 @@
     <Compile Include="Math\Vector3.cs" />
     <Compile Include="Math\Vector4.cs" />
     <Compile Include="Platform\Profiler.cs" />
-    <Compile Include="RScreen.cs" />
+    <Compile Include="Core\RScreen.cs" />
     <Compile Include="Types\RFont.cs" />
     <Compile Include="Types\RTextureGlyph.cs" />
     <Compile Include="Types\RTextureAtlas.cs" />
