--- a/Reactor/Reactor.csproj
+++ b/Reactor/Reactor.csproj
@@ -88,6 +88,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ionic.Zip">
+      <HintPath>packages\DotNetZip.1.9.3\lib\net20\Ionic.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
@@ -140,6 +143,7 @@
     <Compile Include="Audio\RAudioStream.cs" />
     <Compile Include="Audio\RAudioStreamer.cs" />
     <Compile Include="Audio\RMusic.cs" />
+    <Compile Include="Core\RPackage.cs" />
     <Compile Include="Platform\Threading.cs" />
     <Compile Include="Core\RCamera2d.cs" />
     <Compile Include="Core\RFrameBuffer.cs" />
